# telegram-parser

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  session_maker.py
app/: __main__.py
app/internal/repository/: __init__.py  base.py  connection.py  posts.py
app/internal/repository/handlers/: __init__.py  collect_response.py  handle_exception.py
app/internal/services/: __init__.py  posts.py  telegram.py  telegram_posts.py
app/pkg/connectors/: __init__.py  base_connector.py  database.py
app/pkg/di/: __init__.py  di.py
app/pkg/logger/: logger.py
app/pkg/models/: __init__.py
app/pkg/models/app/: __init__.py  post.py
app/pkg/models/base/: __init__.py  model.py
app/pkg/models/exceptions/: __init__.py  post.py  repository.py
app/pkg/settings/: settings.py
docker/python/: Dockerfile
migrations/: 20250322_01_LeklU-create-telegram-posts-table.py
scripts/: migrate.py
